@@ -200,6 +200,10 @@ export(theme_ticksinside)
 export(theme_ticksoutside)
 export(theme_tropical)
 export(theme_void)
+export(theme_zoom_L)
+export(theme_zoom_R)
+export(theme_zoom_T)
+export(theme_zoom_center)
 export(tline)
 export(tlr2xy)
 export(transform_position_tern)
